establish callback for twitter api

--- a/serverless.yml
+++ b/serverless.yml
@@ -14,3 +14,10 @@ functions:
       - httpApi:
           path: /
           method: get
+  
+    twitter_callback:
+      handler: handler.twitter_callback
+      events:
+        - http:
+            path: /callback
+            method: get
