Added Flask API to Base Path for Serverelss Framework to read

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,3 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-async-timeout==4.0.2
-attrs==21.4.0
-build==0.7.0
-certifi==2021.10.8
-charset-normalizer==2.0.12
-dnspython==2.2.1
-emoji==1.7.0
-frozenlist==1.3.0
-idna==3.3
-iniconfig==1.1.1
-little-t-ALEX-MCCUNE @ file:///home/mccune/Projects/little-t/dist/little_t_ALEX_MCCUNE-0.0.1-py3-none-any.whl
-markovify==0.9.4
-mongoengine==0.24.1
-multidict==6.0.2
-oauthlib==3.2.0
-packaging==21.3
-pep517==0.12.0
-pluggy==1.0.0
-py==1.11.0
-pymongo==4.1.1
-pyparsing==3.0.9
-pytest==7.1.2
-python-dotenv==0.20.0
-requests==2.27.1
-requests-oauthlib==1.3.1
-tomli==2.0.1
-tweepy==4.9.0
-Unidecode==1.3.4
-urllib3==1.26.9
-yarl==1.7.2
+Flask==1.1.4
+Werkzeug==1.0.1
+markupsafe==2.0.1
