--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,39 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
+async-timeout==4.0.2
+attrs==21.4.0
+build==0.7.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==7.1.2
+dnspython==2.2.1
+emoji==1.7.0
 Flask==1.1.4
+frozenlist==1.3.0
+idna==3.3
+iniconfig==1.1.1
+itsdangerous==1.1.0
+Jinja2==2.11.3
+-e git+git@github.com:McCune1224/little-t.git@b1c43db55bae4b7818d4c5060a3290c3cd41d48f#egg=little_t_ALEX_MCCUNE
+markovify==0.9.4
+MarkupSafe==2.0.1
+mongoengine==0.24.1
+multidict==6.0.2
+oauthlib==3.2.0
+packaging==21.3
+pep517==0.12.0
+pluggy==1.0.0
+py==1.11.0
+pymongo==4.1.1
+pyparsing==3.0.9
+pytest==7.1.2
+python-dotenv==0.20.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+tomli==2.0.1
+tweepy==4.9.0
+Unidecode==1.3.4
+urllib3==1.26.9
 Werkzeug==1.0.1
+yarl==1.7.2
 markupsafe==2.0.1
