--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ idna==3.3
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+little-t==0.0.1
 markovify==0.9.4
 MarkupSafe==2.0.1
 mongoengine==0.24.1
@@ -35,4 +36,3 @@ Unidecode==1.3.4
 urllib3==1.26.9
 Werkzeug==1.0.1
 yarl==1.7.2
-markupsafe==2.0.1
